--- a/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
+++ b/easycomplex/platform/msvc2008/projects/libcomplex.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\coceditor\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easymesh\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyimage\src;..\..\..\..\easyshape\src;..\..\..\..\easyejoy2d\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\easyshadow\src;..\..\..\..\easysketch\src;..\..\..\..\epbin\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\coceditor\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easymesh\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyimage\src;..\..\..\..\easyshape\src;..\..\..\..\easyejoy2d\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\easyshadow\src;..\..\..\..\easysketch\src;..\..\..\..\epbin\src;..\..\..\..\particle\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -107,7 +107,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\coceditor\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easymesh\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyimage\src;..\..\..\..\easyshape\src;..\..\..\..\easyejoy2d\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\easyshadow\src;..\..\..\..\easysketch\src;..\..\..\..\epbin\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\coceditor\src;..\..\..\..\easyparticle3d\src;..\..\..\..\easymesh\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyimage\src;..\..\..\..\easyshape\src;..\..\..\..\easyejoy2d\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\easyshadow\src;..\..\..\..\easysketch\src;..\..\..\..\epbin\src;..\..\..\..\particle\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -195,6 +195,42 @@
 					RelativePath="..\..\..\src\libcomplex\NodeToSprite.h"
 					>
 				</File>
+				<Filter
+					Name="nodes"
+					>
+					<File
+						RelativePath="..\..\..\src\libcomplex\AnimationToSpr.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcomplex\AnimationToSpr.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcomplex\LabelToSpr.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcomplex\LabelToSpr.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcomplex\Particle3DToSpr.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcomplex\Particle3DToSpr.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcomplex\PictureToSpr.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcomplex\PictureToSpr.h"
+						>
+					</File>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="store"
