--- a/easyparticle2d/platform/msvc2008/projects/libparticle2d.vcproj
+++ b/easyparticle2d/platform/msvc2008/projects/libparticle2d.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easycomplex\src;..\..\..\..\easyscale9\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easycomplex\src;..\..\..\..\easyscale9\src;..\..\..\..\particle\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -107,7 +107,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easycomplex\src;..\..\..\..\easyscale9\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easycomplex\src;..\..\..\..\easyscale9\src;..\..\..\..\particle\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -184,6 +184,18 @@
 				Name="toolbar"
 				>
 				<File
+					RelativePath="..\..\..\src\libparticle2d\ComponentPanel.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libparticle2d\ComponentPanel.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libparticle2d\language.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\libparticle2d\SettingPageBase.cpp"
 					>
 				</File>
@@ -197,6 +209,14 @@
 				</File>
 				<File
 					RelativePath="..\..\..\src\libparticle2d\ToolbarPanel.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libparticle2d\ToolbarPanel2.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libparticle2d\ToolbarPanel2.h"
 					>
 				</File>
 				<Filter
@@ -301,6 +321,22 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\libparticle2d\ParticleSystem2.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libparticle2d\ParticleSystem2.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libparticle2d\PSConfigMgr.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libparticle2d\PSConfigMgr.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libparticle2d\ValueRegion.h"
 				>
 			</File>
@@ -326,7 +362,15 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\libparticle2d\item_string2.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\libparticle2d\ps_config.h"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\libparticle2d\ps_config2.h"
 			>
 		</File>
 	</Files>
