[ADDED] lr unit dialog 动态配置
Former-commit-id: 461f7a9dc3f804d91b74989b8f75831702a116c1

--- a/lr/platform/msvc2008/projects/lr.vcproj
+++ b/lr/platform/msvc2008/projects/lr.vcproj
@@ -464,6 +464,14 @@
 					RelativePath="..\..\..\src\lr\dataset\UnitInfo.h"
 					>
 				</File>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\UnitWidget.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\lr\dataset\UnitWidget.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
