[ADDED] p2d fileio, rename p3d
Former-commit-id: dc0521751b0904f7affc173cd1b037f5188c55dc

--- a/easyparticle2d/platform/msvc2008/projects/libparticle2d.vcproj
+++ b/easyparticle2d/platform/msvc2008/projects/libparticle2d.vcproj
@@ -300,6 +300,22 @@
 				RelativePath="..\..\..\src\libparticle2d\CocoPacker.h"
 				>
 			</File>
+			<File
+				RelativePath="..\..\..\src\libparticle2d\FileIO.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libparticle2d\FileIO.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libparticle2d\LoadAdapter.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libparticle2d\LoadAdapter.h"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\..\..\src\libparticle2d\config.h"
