--- a/coceditor/platform/msvc2008/projects/libcoco.vcproj
+++ b/coceditor/platform/msvc2008/projects/libcoco.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyimage\src;..\..\..\..\epbin\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easyshape\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\easyparticle3d\src;..\..\..\..\particle\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyimage\src;..\..\..\..\epbin\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easyshape\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\particle\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyparticle3d\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -107,7 +107,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyimage\src;..\..\..\..\epbin\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easyshape\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\easyparticle3d\src;..\..\..\..\particle\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;"
+				AdditionalIncludeDirectories="..\..\..\..\drag2d\src\drag2d;..\..\..\..\easy3d\src\easy3d;..\..\..\..\easybuilder\src;..\..\..\..\easyanim\src;..\..\..\..\easyscale9\src;..\..\..\..\easycomplex\src;..\..\..\..\easymesh\src;..\..\..\..\easyimage\src;..\..\..\..\epbin\src;..\..\..\..\easyterrain2d\src;..\..\..\..\easyshape\src;..\..\..\..\easytexture\src;..\..\..\..\easyicon\src;..\..\..\..\particle\src;..\..\..\..\easyparticle2d\src;..\..\..\..\easyparticle3d\src;&quot;..\..\..\..\editor-external\wx\include&quot;;&quot;..\..\..\..\editor-external\json\include&quot;;&quot;..\..\..\..\editor-external\freetype\include&quot;;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -387,6 +387,58 @@
 						</File>
 					</Filter>
 				</Filter>
+				<Filter
+					Name="5. particle2d"
+					>
+					<File
+						RelativePath="..\..\..\src\libcoco\PackParticle2D.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcoco\PackParticle2D.h"
+						>
+					</File>
+					<Filter
+						Name="bin"
+						>
+						<File
+							RelativePath="..\..\..\src\libcoco\Particle2DFromBin.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\Particle2DFromBin.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\Particle2DToBin.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\Particle2DToBin.h"
+							>
+						</File>
+					</Filter>
+					<Filter
+						Name="lua"
+						>
+						<File
+							RelativePath="..\..\..\src\libcoco\Particle2DFromLua.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\Particle2DFromLua.h"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\Particle2DToLuaString.cpp"
+							>
+						</File>
+						<File
+							RelativePath="..\..\..\src\libcoco\Particle2DToLuaString.h"
+							>
+						</File>
+					</Filter>
+				</Filter>
 			</Filter>
 			<Filter
 				Name="builder"
@@ -488,6 +540,18 @@
 					</File>
 					<File
 						RelativePath="..\..\..\src\libcoco\Particle3DBuilder.h"
+						>
+					</File>
+				</Filter>
+				<Filter
+					Name="5. particle2d"
+					>
+					<File
+						RelativePath="..\..\..\src\libcoco\Particle2DBuilder.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\..\src\libcoco\Particle2DBuilder.h"
 						>
 					</File>
 				</Filter>
