--- a/easyicon/platform/msvc2008/projects/libicon.vcproj
+++ b/easyicon/platform/msvc2008/projects/libicon.vcproj
@@ -232,74 +232,6 @@
 				RelativePath="..\..\..\src\libicon\Symbol.h"
 				>
 			</File>
-			<Filter
-				Name="icon"
-				>
-				<File
-					RelativePath="..\..\..\src\libicon\Icon.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libicon\Icon.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libicon\IconFactory.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libicon\IconFactory.h"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libicon\IconType.cpp"
-					>
-				</File>
-				<File
-					RelativePath="..\..\..\src\libicon\IconType.h"
-					>
-				</File>
-				<Filter
-					Name="static"
-					>
-					<File
-						RelativePath="..\..\..\src\libicon\QuadIcon.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\libicon\QuadIcon.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\libicon\RectIcon.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\libicon\RectIcon.h"
-						>
-					</File>
-				</Filter>
-				<Filter
-					Name="dynamic"
-					>
-					<File
-						RelativePath="..\..\..\src\libicon\ChangedRectIcon.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\libicon\ChangedRectIcon.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\libicon\ChangedSectorIcon.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\..\src\libicon\ChangedSectorIcon.h"
-						>
-					</File>
-				</Filter>
-			</Filter>
 		</Filter>
 		<Filter
 			Name="editop"
@@ -349,6 +281,14 @@
 			Name="frame"
 			>
 			<File
+				RelativePath="..\..\..\src\libicon\EditDialog.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libicon\EditDialog.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libicon\FileIO.cpp"
 				>
 			</File>
@@ -356,6 +296,74 @@
 				RelativePath="..\..\..\src\libicon\FileIO.h"
 				>
 			</File>
+		</Filter>
+		<Filter
+			Name="icon"
+			>
+			<File
+				RelativePath="..\..\..\src\libicon\Icon.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libicon\Icon.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libicon\IconFactory.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libicon\IconFactory.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libicon\IconType.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libicon\IconType.h"
+				>
+			</File>
+			<Filter
+				Name="static"
+				>
+				<File
+					RelativePath="..\..\..\src\libicon\QuadIcon.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libicon\QuadIcon.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libicon\RectIcon.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libicon\RectIcon.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="dynamic"
+				>
+				<File
+					RelativePath="..\..\..\src\libicon\ChangedRectIcon.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libicon\ChangedRectIcon.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libicon\ChangedSectorIcon.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\libicon\ChangedSectorIcon.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<File
 			RelativePath="..\..\..\src\libicon\config.h"
