--- a/dtex/platform/msvc2008/projects/dtex.vcproj
+++ b/dtex/platform/msvc2008/projects/dtex.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\..\..\src;&quot;..\..\..\..\editor-external\c99&quot;"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\external\tools;..\..\..\..\ejoy2d\src;..\..\..\..\ejoy2d\src\render;..\..\..\..\particle\src;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\cjson\include&quot;;&quot;..\..\..\..\editor-external\lzma\include&quot;;&quot;..\..\..\..\editor-external\pthread\include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="..\..\..\src;&quot;..\..\..\..\editor-external\c99&quot;"
+				AdditionalIncludeDirectories="..\..\..\src;..\..\..\external\tools;..\..\..\..\ejoy2d\src;..\..\..\..\ejoy2d\src\render;..\..\..\..\particle\src;&quot;..\..\..\..\editor-external\c99&quot;;&quot;..\..\..\..\editor-external\gl\include&quot;;&quot;..\..\..\..\editor-external\lua\include&quot;;&quot;..\..\..\..\editor-external\cjson\include&quot;;&quot;..\..\..\..\editor-external\lzma\include&quot;;&quot;..\..\..\..\editor-external\pthread\include&quot;"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB;_CRT_SECURE_NO_WARNINGS;GLEW_STATIC"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
@@ -145,30 +145,166 @@
 	<References>
 	</References>
 	<Files>
-		<File
-			RelativePath="..\..\..\src\dtex_alloc.c"
+		<Filter
+			Name="loader"
 			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_alloc.h"
+			<File
+				RelativePath="..\..\..\src\dtex_desc_loader.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_desc_loader.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_etc1.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_etc1.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_loader.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_loader.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_png.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_png.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_pvr.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_pvr.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_texture_loader.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_texture_loader.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="dataset"
 			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_async.c"
+			<File
+				RelativePath="..\..\..\src\dtex_b4r.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_b4r.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_c1.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_c1.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_c2.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_c2.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_c3.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_c3.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_pts.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_pts.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_rrp.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_rrp.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_rrr.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_rrr.h"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="utility"
 			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_async.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_b4r.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_b4r.h"
-			>
-		</File>
+			<File
+				RelativePath="..\..\..\src\dtex_alloc.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_alloc.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_async.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_async.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_file.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_file.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_file_common.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_utility.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_utility.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_vector.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\dtex_vector.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\dtex_buffer.c"
 			>
@@ -178,43 +314,11 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\dtex_c1.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_c1.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_c2.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_c2.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_c3.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_c3.h"
-			>
-		</File>
-		<File
 			RelativePath="..\..\..\src\dtex_draw.c"
 			>
 		</File>
 		<File
 			RelativePath="..\..\..\src\dtex_draw.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_etc1.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_etc1.h"
 			>
 		</File>
 		<File
@@ -242,14 +346,6 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\dtex_loader.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_loader.h"
-			>
-		</File>
-		<File
 			RelativePath="..\..\..\src\dtex_math.h"
 			>
 		</File>
@@ -270,46 +366,6 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\dtex_png.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_png.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_pts.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_pts.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_pvr.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_pvr.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_rrp.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_rrp.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_rrr.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_rrr.h"
-			>
-		</File>
-		<File
 			RelativePath="..\..\..\src\dtex_sprite.c"
 			>
 		</File>
@@ -326,6 +382,14 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\dtex_texture_pool.c"
+			>
+		</File>
+		<File
+			RelativePath="..\..\..\src\dtex_texture_pool.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\dtex_typedef.c"
 			>
 		</File>
@@ -334,19 +398,7 @@
 			>
 		</File>
 		<File
-			RelativePath="..\..\..\src\dtex_utility.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_utility.h"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_vector.c"
-			>
-		</File>
-		<File
-			RelativePath="..\..\..\src\dtex_vector.h"
+			RelativePath="..\..\..\src\ejoy2d.h"
 			>
 		</File>
 		<File
